# bluewire

./: .gitignore  Procfile  cmp.json  pr_bluehub_import.json
apps/bluehub_theme/: MANIFEST.in  README.md  pyproject.toml
apps/bluehub_theme/bluehub_theme/: hooks.py
apps/bluehub_theme/bluehub_theme/public/css/: bluehub_theme.css
apps/bluehub_theme/bluehub_theme/public/js/: bluehub_theme.js
apps/erpnext/erpnext/accounts/doctype/sales_invoice/: sales_invoice.json
apps/erpnext/erpnext/assets/doctype/asset_depreciation_schedule/: asset_depreciation_schedule.py
apps/erpnext/erpnext/buying/doctype/supplier/: supplier.js
apps/erpnext/erpnext/manufacturing/doctype/work_order/: work_order.js
apps/erpnext/erpnext/selling/doctype/customer/: customer.js
apps/erpnext/erpnext/setup/setup_wizard/operations/: install_fixtures.py
apps/erpnext/erpnext/stock/doctype/serial_and_batch_bundle/: serial_and_batch_bundle.py  test_serial_and_batch_bundle.py
apps/erpnext/erpnext/stock/doctype/stock_entry/: stock_entry.js  stock_entry.py
apps/frappe/frappe/core/doctype/file/: file.py
apps/frappe/frappe/core/doctype/system_settings/: system_settings.py
apps/frappe/frappe/core/doctype/user/: user.py
apps/frappe/frappe/printing/doctype/print_format/: print_format.js  print_format.json  print_format.py
apps/frappe/frappe/public/scss/common/: grid.scss
config/: nginx.conf  redis_cache.conf  supervisor.conf
config/pids/: redis_queue.rdb
sites/: apps.json  apps.txt  common_site_config.json
sites/assets/: assets-rtl.json  assets.json  bluehub_theme
(+6 files in other folders)
